feat: finish desktop layouting

--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -1,7 +1,13 @@
 
 $container-width: 1440px;
-$container-padding: 10px;
+$container-padding: 20px;
+$header-height: 90px;
+$works-item-gap: 25px;
+$price-list-item-gap: 25px;
 
 $bg-color: black;
 $text-color: white;
 $theme-color: #bdae82;
+
+$main-font: 'Inter', sans-serif;
+$headers-font: 'Merriweather', serif;
