--- a/src/templates/header.hbs
+++ b/src/templates/header.hbs
@@ -1,3 +1,29 @@
 <header class="header">
-  <h1>Hello world!</h1>
+  <a class="logo" href="#">
+    <img src="../assets/logo.svg" alt="site logo">
+  </a>
+  <nav class="header-nav">
+    <ul class="header-menu">
+      <li class="header-menu__item">
+        <a class="header-menu__item-link" href="">Skills</a>
+      </li>
+      <li class="header-menu__item">
+        <a class="header-menu__item-link" href="">Portfolio</a>
+      </li>
+      <li class="header-menu__item">
+        <a class="header-menu__item-link" href="">Video</a>
+      </li>
+      <li class="header-menu__item">
+        <a class="header-menu__item-link" href="">Price</a>
+      </li>
+      <li class="header-menu__item">
+        <a class="header-menu__item-link" href="">Contacts</a>
+      </li>
+    </ul>
+    <div class="language-switcher">
+      <a class="language-switcher__link language-switcher__link_active" href="#en">en</a>
+      <span>&nbsp;/</span>
+      <a class="language-switcher__link" href="#ru">ru</a>
+    </div>
+  </nav>
 </header>
