--- a/src/index.hbs
+++ b/src/index.hbs
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
   <title>
     Portfolio
   </title>
@@ -11,14 +14,14 @@
 <body>
   <div class="container">
     {{>'./templates/header'}}
+    {{>'./templates/hero'}}
     <main class="main">
-      {{>'./templates/hero'}}
       {{>'./templates/skills'}}
       {{>'./templates/portfolio'}}
       {{>'./templates/video'}}
       {{>'./templates/price'}}
-      {{>'./templates/contacts'}}
     </main>
+    {{>'./templates/contacts'}}
     {{>'./templates/footer'}}
   </div>
 </body>
