--- a/src/templates/footer.hbs
+++ b/src/templates/footer.hbs
@@ -1,1 +1,24 @@
-<footer></footer>
+<footer class="footer">
+  <div class="footer__github-link github-link">
+    &copy;&nbsp;&nbsp;&nbsp;
+    <span class="year">2022</span>
+    <a href="https://github.com/tretyakov-a">github</a>
+  </div>
+  <div class="footer__rsschool-link rsschool-link">
+    Rolling Scopes School
+  </div>
+  <ul class="footer__socials socials">
+    <li class="footer__socials-item socials-item">
+      <img src="../assets/socials/instagram.svg" alt="instagram">
+    </li>
+    <li class="footer__socials-item socials-item">
+      <img src="../assets/socials/facebook.svg" alt="facebook">
+    </li>
+    <li class="footer__socials-item socials-item">
+      <img src="../assets/socials/twitter.svg" alt="twitter">
+    </li>
+    <li class="footer__socials-item socials-item">
+      <img src="../assets/socials/pinterest.svg" alt="pinterest">
+    </li>
+  </ul>
+</footer>
