--- a/src/templates/header.hbs
+++ b/src/templates/header.hbs
@@ -2,24 +2,31 @@
   <a class="logo" href="#">
     <img src="../assets/logo.svg" alt="site logo">
   </a>
-  <nav class="header-nav">
-    <ul class="header-menu">
-      <li class="header-menu__item">
-        <a class="header-menu__item-link" href="">Skills</a>
-      </li>
-      <li class="header-menu__item">
-        <a class="header-menu__item-link" href="">Portfolio</a>
-      </li>
-      <li class="header-menu__item">
-        <a class="header-menu__item-link" href="">Video</a>
-      </li>
-      <li class="header-menu__item">
-        <a class="header-menu__item-link" href="">Price</a>
-      </li>
-      <li class="header-menu__item">
-        <a class="header-menu__item-link" href="">Contacts</a>
-      </li>
-    </ul>
+  <nav class="header__nav">
+    <div class="header__menu-container">
+      <div class="header__menu-hamburger menu-hamburger">
+        <div class="menu-hamburger__line"></div>
+        <div class="menu-hamburger__line"></div>
+        <div class="menu-hamburger__line"></div>
+      </div>
+      <ul class="header-menu">
+        <li class="header-menu__item">
+          <a class="header-menu__item-link" href="#skills">Skills</a>
+        </li>
+        <li class="header-menu__item">
+          <a class="header-menu__item-link" href="#portfolio">Portfolio</a>
+        </li>
+        <li class="header-menu__item">
+          <a class="header-menu__item-link" href="#video">Video</a>
+        </li>
+        <li class="header-menu__item">
+          <a class="header-menu__item-link" href="#price">Price</a>
+        </li>
+        <li class="header-menu__item">
+          <a class="header-menu__item-link" href="#contacts">Contacts</a>
+        </li>
+      </ul>
+    </div>
     <div class="language-switcher">
       <a class="language-switcher__link language-switcher__link_active" href="#en">en</a>
       <span>&nbsp;/</span>
