--- a/src/templates/portfolio.hbs
+++ b/src/templates/portfolio.hbs
@@ -1,4 +1,4 @@
-<section class="portfolio section">
+<section class="portfolio section" id="portfolio">
   <div class="section__header-container">
     <h2 class="section__header">Portfolio</h2>
   </div>
