--- a/src/templates/contacts.hbs
+++ b/src/templates/contacts.hbs
@@ -1,4 +1,4 @@
-<section class="contacts section">
+<section class="contacts section" id="contacts">
   <div class="contacts__content section__content">
     <div class="contacts__container">
       <div class="contacts__title">Contact me</div>
