--- a/src/templates/skills.hbs
+++ b/src/templates/skills.hbs
@@ -1,4 +1,4 @@
-<section class="skills section">
+<section class="skills section" id="skills">
   <div class="section__header-container">
     <h2 class="section__header">Skills</h2>
   </div>
