--- a/src/templates/video.hbs
+++ b/src/templates/video.hbs
@@ -1,4 +1,4 @@
-<section class="video section">
+<section class="video section" id="video">
   <div class="section__header-container">
     <h2 class="section__header">Video</h2>
   </div>
