feat: finish adaptive

--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -4,6 +4,7 @@ $container-padding: 20px;
 $header-height: 90px;
 $works-item-gap: 25px;
 $price-list-item-gap: 25px;
+$skills-list-item-gap: 40px;
 
 $bg-color: black;
 $text-color: white;
