--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -23,6 +23,7 @@
 
   &__socials {
     display: flex;
+    align-items: center;
   }
 
   &__socials-item:not(:last-child) {
@@ -36,6 +37,25 @@
       width: 32px;
       height: 32px;
       object-fit: contain;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .footer {
+    height: 190px;
+    flex-direction: column;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    
+    &__rsschool-link {
+      padding-left: 0px;
+    }
+
+    &__github-link,
+    &__rsschool-link,
+    &__socials  {
+      flex-basis: calc(100% / 3);
     }
   }
 }
