--- a/src/templates/footer.hbs
+++ b/src/templates/footer.hbs
@@ -5,20 +5,28 @@
     <a href="https://github.com/tretyakov-a">github</a>
   </div>
   <div class="footer__rsschool-link rsschool-link">
-    Rolling Scopes School
+    <a href="https://app.rs.school/">Rolling Scopes School</a>
   </div>
   <ul class="footer__socials socials">
     <li class="footer__socials-item socials-item">
-      <img src="../assets/socials/instagram.svg" alt="instagram">
+      <a href="#contacts">
+        <img src="../assets/socials/instagram.svg" alt="instagram">
+      </a>
     </li>
     <li class="footer__socials-item socials-item">
-      <img src="../assets/socials/facebook.svg" alt="facebook">
+      <a href="#contacts">
+        <img src="../assets/socials/facebook.svg" alt="facebook">
+      </a>
     </li>
     <li class="footer__socials-item socials-item">
-      <img src="../assets/socials/twitter.svg" alt="twitter">
+      <a href="#contacts">
+        <img src="../assets/socials/twitter.svg" alt="twitter">
+      </a>
     </li>
     <li class="footer__socials-item socials-item">
-      <img src="../assets/socials/pinterest.svg" alt="pinterest">
+      <a href="#contacts">
+        <img src="../assets/socials/pinterest.svg" alt="pinterest">
+      </a>
     </li>
   </ul>
 </footer>
