--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -21,6 +21,9 @@ a {
   color: $text-color;
   transition: 0.4s;
 }
+a:hover {
+  color: $theme-color;
+}
 
 img {
   display: block;
@@ -109,8 +112,28 @@ ul {
 
 @media (max-width: 768px) {
   .section {
+    margin-top: 80px;
+
     &__header-container {
       width: 364px;
+    }
+
+    &__header {
+      font-size: 32px;
+    }
+  }
+}
+
+@media (max-width: 540px) {
+  .section {
+    margin-top: 20px;
+
+    &__header-container {
+      margin-bottom: 20px;
+    }
+
+    &__header-container {
+      width: 90%;
     }
   }
 }
