--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -23,3 +23,17 @@
     margin-bottom: 25px;
   }
 }
+
+@media (max-width: 768px) {
+  .hero {
+    padding-top: 150px;
+    height: 590px;
+    padding-left: $container-padding;
+
+    &__title {
+      font-weight: normal;
+      font-size: 32px;
+      line-height: 64px;
+    }
+  }
+}
