--- a/src/styles/price.scss
+++ b/src/styles/price.scss
@@ -2,11 +2,13 @@
   &__list {
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     margin-bottom: -$price-list-item-gap;
+    justify-content: center;
   }
 
   &__list-item {
-    flex: 1 1 calc((100% - 2 * #{$price-list-item-gap}) / 3);
+    flex-basis: calc((100% - 2 * #{$price-list-item-gap}) / 3);
     margin-bottom: $price-list-item-gap;
     border: 3px solid $theme-color;
   }
@@ -43,5 +45,51 @@
 
   &__order-btn {
     margin-top: 40px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .price {
+    &__list {
+      justify-content: center;
+    }
+
+    &__list-item:not(:last-child) {
+      margin-right: 0px;
+    }
+
+    &__list-item:nth-child(2n + 1) {
+      margin-right: 40px;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .price {
+    &__list {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    &__list-item {
+      width: 420px;
+    }
+
+    &__list-item:nth-child(2n + 1) {
+      margin-right: 0px;
+    }
+  }
+}
+
+@media (max-width: 540px) {
+  .price {
+    &__list-item {
+      flex-basis: 100%;
+      width: auto;
+    }
+  }
+
+  .price-item {
+    padding: 10px;
   }
 }
