--- a/src/styles/skills.scss
+++ b/src/styles/skills.scss
@@ -1,20 +1,19 @@
 .skills {
   &__list {
     display: flex;
-  }
-  
-  &__list-item:not(:last-child) {
-    margin-right: 40px;
+    flex-wrap: wrap;
+    margin-bottom: -$skills-list-item-gap;
   }
 
   &__list-item {
-    flex: 1 1 25%;
+    flex-basis: calc((100% - 3 * #{$skills-list-item-gap}) / 4);
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: stretch;
     text-align: center;
     padding-bottom: 10px;
+    margin-bottom: $skills-list-item-gap;
 
     &-icon {
       text-align: center;
@@ -40,6 +39,42 @@
       font-size: 18px;
       line-height: 36px;
       padding: 0 20px;
+    }
+  }
+
+  &__list-item:not(:last-child) {
+    margin-right: $skills-list-item-gap;
+  }
+}
+
+@media (max-width: 1024px) {
+  .skills {
+    &__list-item:not(:last-child) {
+      margin-right: 0px;
+    }
+
+    &__list-item:nth-child(2n + 1) {
+      margin-right: $skills-list-item-gap;
+    }
+
+    &__list-item {
+      flex-basis: calc((100% - #{$skills-list-item-gap}) / 2);
+    }
+  }
+}
+
+@media (max-width: 540px) {
+  .skills {
+    &__list {
+      flex-direction: column;
+    }
+
+    &__list-item:not(:last-child) {
+      margin-right: 0px;
+    }
+
+    &__list-item {
+      flex-basis: 100%;
     }
   }
 }
