--- a/movie-app/src/styles/header.scss
+++ b/movie-app/src/styles/header.scss
@@ -44,6 +44,7 @@
     background: transparent;
     margin-right: 10px;
     text-align: center;
+    transition: 0.2s;
 
     img {
       width: 100%;
@@ -52,9 +53,12 @@
     }
   }
   
+  &__button:hover {
+    color: var(--light-text-color);
+  }
+
   &__button-icon {
     width: 20px;
     height: 20px;
-    stroke: var(--dark-text-color);
   }
 }
