--- a/movie-app/src/templates/footer.ejs
+++ b/movie-app/src/templates/footer.ejs
@@ -11,8 +11,8 @@
   <div>
     <div class="footer__github-link">
       <a href="https://github.com/tretyakov-a">
-        <img src="<%= require('../assets/github-32.png') %>" alt="github icon">
-        tretyakov-a
+        <i class="fab fa-github"></i>
+        <span>tretyakov-a</span>
       </a>
       <span>,&nbsp;2021</span>
     </div>
