--- a/movie-app/src/templates/header.ejs
+++ b/movie-app/src/templates/header.ejs
@@ -8,7 +8,7 @@
     <form class="search-form" action="#">
       <input class="search-form__input" type="text" name="search" id="search">
       <button class="search-form__button">
-        <img src="<%= require('../assets/search.svg') %>" alt="search button">
+        <i class="fas fa-search"></i>
       </button>
     </form>
   </div>
