feat: add poster placeholder

--- a/movie-app/src/templates/movie-card-full.ejs
+++ b/movie-app/src/templates/movie-card-full.ejs
@@ -1,6 +1,6 @@
 <div class="movie-card-full">
   <div class="movie-card-full__poster-container">
-    <img class="movie-card-full__poster" src="<%= locals.Poster %>" alt="<%= locals.Title %>">
+    <img class="movie-card-full__poster poster" src="<%= locals.Poster %>" alt="<%= locals.Title %>">
   </div>
   <div class="movie-card-full__info-block">
     <h2 class="movie-card-full__title"><%= locals.Title %></h2>
