--- a/movie-app/src/templates/movie-card.ejs
+++ b/movie-app/src/templates/movie-card.ejs
@@ -1,7 +1,8 @@
+
 <li class="movies-list__item movie-card" data-id="<%= locals.imdbID %>">
   <div class="movie-card__poster-container">
     <div class="movie-card__movie-type"><%= locals.Type %></div>
-    <img class="movie-card__poster" src="<%= locals.Poster %>" alt="<%= locals.Title %>">
+    <img class="movie-card__poster poster" src="<%= locals.Poster %>" alt="<%= locals.Title %>">
   </div>
   <div class="movie-card__info">
     <span class="movie-card__country"><%= locals.Country %></span>,&nbsp;
