--- a/movie-app/src/styles/popup.scss
+++ b/movie-app/src/styles/popup.scss
@@ -2,7 +2,7 @@
   display: none;
   z-index: 100;
   position: fixed;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background: rgba($color: #000000, $alpha: 0.6);
 
