--- a/movie-app/src/templates/header.ejs
+++ b/movie-app/src/templates/header.ejs
@@ -6,7 +6,7 @@
   </div>
   <div class="header__search-form-container">
     <form class="search-form" action="#">
-      <input class="search-form__input" type="text" name="search" id="search">
+      <input class="search-form__input" type="text" name="search" id="search" placeholder="Search for movies">
       <button class="search-form__button">
         <i class="fas fa-search"></i>
       </button>
