--- a/movie-app/src/styles/movies-list.scss
+++ b/movie-app/src/styles/movies-list.scss
@@ -4,26 +4,35 @@
   flex-wrap: wrap;
 
   &__item {
-    flex-basis: calc((100% - 4 * var(--list-item-gap)) / 5);
+    flex-basis: calc((100% - 3 * var(--list-item-gap)) / 4);
     margin-bottom: var(--list-item-gap);
     cursor: pointer;
-    transform: scale(1);
     transition: 0.2s;
+    border-radius: 5px;
+    overflow: hidden;
   }
-
-  &__item:hover {
-    transform: scale(1.02);
-  }
-
-  &__item:not(:nth-child(5n)) {
+  
+  &__item:not(:nth-child(4n)) {
     margin-right: var(--list-item-gap);
   }
+  
+  &__item:hover {
+    box-shadow: 4px 4px 4px 0px var(--main-light-color);
+  }
+
 }
 .movie-card {
+
   &__poster-container {
     position: relative;
     width: 100%;
-    height: 300px;
+    height: 420px;
+    overflow: hidden;
+  }
+  
+  &__text-content {
+    padding: 0 5px;
+    padding-bottom: 5px;
   }
 
   &__movie-type {
@@ -50,7 +59,7 @@
   &__info,
   &__ratings {
     font-weight: bold;
-    padding-top: 12px;
+    margin-top: 12px;
   }
 
   &__title {
@@ -85,22 +94,6 @@
 
 @media (max-width: 1024px) {
   .movies-list {
-  
-    &__item {
-      flex-basis: calc((100% - 3 * var(--list-item-gap)) / 4);
-    }
-    &__item:not(:nth-child(5n)) {
-      margin-right: 0;
-    }
-    &__item:not(:nth-child(4n)) {
-      margin-right: var(--list-item-gap);
-    }
-  }
-}
-
-@media (max-width: 768px) {
-  .movies-list {
-  
     &__item {
       flex-basis: calc((100% - 2 * var(--list-item-gap)) / 3);
     }
@@ -108,6 +101,20 @@
       margin-right: 0;
     }
     &__item:not(:nth-child(3n)) {
+      margin-right: var(--list-item-gap);
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .movies-list {
+    &__item {
+      flex-basis: calc((100% - var(--list-item-gap)) / 2);
+    }
+    &__item:not(:nth-child(3n)) {
+      margin-right: 0;
+    }
+    &__item:not(:nth-child(2n)) {
       margin-right: var(--list-item-gap);
     }
   }
@@ -121,7 +128,7 @@
     &__item {
       width: 300px;
     }
-    &__item:not(:nth-child(3n)) {
+    &__item:not(:nth-child(2n)) {
       margin-right: 0;
     }
   }
