feat: add search result listing

--- a/movie-app/src/styles/constants.scss
+++ b/movie-app/src/styles/constants.scss
@@ -11,6 +11,7 @@
   --container-padding: 20px;
   --list-item-gap: 30px;
   --header-height: 80px;
+  --search-form-height: 36px;
 
   &.light {
     --dark-text-color: tomato;
