--- a/movie-app/src/templates/header.ejs
+++ b/movie-app/src/templates/header.ejs
@@ -7,6 +7,9 @@
   <div class="header__search-form-container">
     <form class="search-form" action="#">
       <input class="search-form__input" type="text" name="search" id="search" placeholder="Search for movies">
+      <ul class="search-form__search-list">
+
+      </ul>
       <button class="search-form__button">
         <i class="fas fa-search"></i>
       </button>
