--- a/movie-app/src/styles/index.scss
+++ b/movie-app/src/styles/index.scss
@@ -6,6 +6,8 @@
 @import "header";
 @import "footer";
 @import "movies-list";
+@import "movie-card";
 @import "movie-card-full";
 @import "popup";
 @import "search-form";
+@import "loader";
