--- a/movie-app/src/styles/popup.scss
+++ b/movie-app/src/styles/popup.scss
@@ -4,7 +4,7 @@
   position: fixed;
   width: 100%;
   height: 100vh;
-  background: rgba($color: #000000, $alpha: 0.6);
+  background: var(--bg-color-rgba);
 
   &__close {
     position: absolute;
