feat: add translation

--- a/src/templates/header.hbs
+++ b/src/templates/header.hbs
@@ -11,26 +11,26 @@
       </div>
       <ul class="header-menu">
         <li class="header-menu__item">
-          <a class="header-menu__item-link" href="#skills">Skills</a>
+          <a class="header-menu__item-link" href="#skills" data-translate="skills">Skills</a>
         </li>
         <li class="header-menu__item">
-          <a class="header-menu__item-link" href="#portfolio">Portfolio</a>
+          <a class="header-menu__item-link" href="#portfolio" data-translate="portfolio">Portfolio</a>
         </li>
         <li class="header-menu__item">
-          <a class="header-menu__item-link" href="#video">Video</a>
+          <a class="header-menu__item-link" href="#video" data-translate="video">Video</a>
         </li>
         <li class="header-menu__item">
-          <a class="header-menu__item-link" href="#price">Price</a>
+          <a class="header-menu__item-link" href="#price" data-translate="price">Price</a>
         </li>
         <li class="header-menu__item">
-          <a class="header-menu__item-link" href="#contacts">Contacts</a>
+          <a class="header-menu__item-link" href="#contacts" data-translate="contacts">Contacts</a>
         </li>
       </ul>
     </div>
     <div class="language-switcher">
-      <a class="language-switcher__link language-switcher__link_active" href="#en">en</a>
+      <a class="language-switcher__link language-switcher__link_active" href="#" data-language="en">en</a>
       <span>&nbsp;/</span>
-      <a class="language-switcher__link" href="#ru">ru</a>
+      <a class="language-switcher__link" href="#" data-language="ru">ru</a>
     </div>
   </nav>
 </header>
