--- a/src/templates/skills.hbs
+++ b/src/templates/skills.hbs
@@ -1,6 +1,6 @@
 <section class="skills section" id="skills">
   <div class="section__header-container">
-    <h2 class="section__header">Skills</h2>
+    <h2 class="section__header" data-translate="skills">Skills</h2>
   </div>
   <div class="section__content">
     <ul class="skills__list">
@@ -8,10 +8,10 @@
         <div class="skills__list-item-icon">
           <img src="../assets/skills/camera.svg" alt="Digital photography skill">
         </div>
-        <h4 class="skills__list-item-title">
+        <h4 class="skills__list-item-title" data-translate="skill-title-1">
           Digital photography
         </h4>
-        <div class="skills__list-item-text">
+        <div class="skills__list-item-text" data-translate="skill-text-1">
           High-quality photos in the studio and on the nature
         </div>
       </li>
@@ -19,10 +19,10 @@
         <div class="skills__list-item-icon">
           <img src="../assets/skills/video.svg" alt="Video shooting skill">
         </div>
-        <h4 class="skills__list-item-title">
+        <h4 class="skills__list-item-title" data-translate="skill-title-2">
           Video shooting
         </h4>
-        <div class="skills__list-item-text">
+        <div class="skills__list-item-text" data-translate="skill-text-2">
           Capture your moments so that they always stay with you
         </div>
       </li>
@@ -30,10 +30,10 @@
         <div class="skills__list-item-icon">
           <img src="../assets/skills/image.svg" alt="Rotouch skill">
         </div>
-        <h4 class="skills__list-item-title">
+        <h4 class="skills__list-item-title" data-translate="skill-title-3">
           Rotouch
         </h4>
-        <div class="skills__list-item-text">
+        <div class="skills__list-item-text" data-translate="skill-text-3">
           I strive to make photography surpass reality
         </div>
       </li>
@@ -41,10 +41,10 @@
         <div class="skills__list-item-icon">
           <img src="../assets/skills/mic.svg" alt="Audio skill">
         </div>
-        <h4 class="skills__list-item-title">
+        <h4 class="skills__list-item-title" data-translate="skill-title-4">
           Audio
         </h4>
-        <div class="skills__list-item-text">
+        <div class="skills__list-item-text" data-translate="skill-text-4">
           Professional sounds recording for video, advertising, portfolio
         </div>
       </li>                  
