--- a/src/templates/video.hbs
+++ b/src/templates/video.hbs
@@ -1,6 +1,6 @@
 <section class="video section" id="video">
   <div class="section__header-container">
-    <h2 class="section__header">Video</h2>
+    <h2 class="section__header" data-translate="video">Video</h2>
   </div>
   <div class="section__content">
     <div class="video__player video-player">
