--- a/src/templates/hero.hbs
+++ b/src/templates/hero.hbs
@@ -1,10 +1,10 @@
 <section class="hero">
   <div class="hero__inner">
-    <h1 class="hero__title">Alexa Rise</h1>
-    <p class="hero__text">
+    <h1 class="hero__title" data-translate="hero-title">Alexa Rise</h1>
+    <p class="hero__text" data-translate="hero-text">
       Save sincere emotions, romantic feelings and happy moments of life together with professional photographer Alexa Rise
     </p>
-    <button class="hero__button button button_filled">
+    <button class="hero__button button button_filled" data-translate="hire">
       Hire me
     </button>
   </div>
