--- a/src/templates/portfolio.hbs
+++ b/src/templates/portfolio.hbs
@@ -1,13 +1,13 @@
 <section class="portfolio section" id="portfolio">
   <div class="section__header-container">
-    <h2 class="section__header">Portfolio</h2>
+    <h2 class="section__header" data-translate="portfolio">Portfolio</h2>
   </div>
   <div class="section__content">
     <div class="portfolio__buttons-group">
-      <button class="portfolio__button button" data-folder="winter">Winter</button>
-      <button class="portfolio__button button" data-folder="spring">Spring</button>
-      <button class="portfolio__button button" data-folder="summer">Summer</button>
-      <button class="portfolio__button button button_filled" data-folder="autumn">Autumn</button>
+      <button class="portfolio__button button" data-folder="winter" data-translate="winter">Winter</button>
+      <button class="portfolio__button button" data-folder="spring" data-translate="spring">Spring</button>
+      <button class="portfolio__button button" data-folder="summer" data-translate="summer">Summer</button>
+      <button class="portfolio__button button button_filled" data-folder="autumn" data-translate="autumn">Autumn</button>
     </div>
     <div class="portfolio__works-container">
       {{!-- winter --}}
