--- a/src/templates/price.hbs
+++ b/src/templates/price.hbs
@@ -1,6 +1,6 @@
 <section class="price section" id="price">
   <div class="section__header-container">
-    <h2 class="section__header">Price</h2>
+    <h2 class="section__header" data-translate="price">Price</h2>
   </div>
   <div class="section__content">
     <ul class="price__list">
@@ -8,11 +8,11 @@
         <h4 class="price-item__title">Standart</h4>
         <div class="price-item__price">500&nbsp;&dollar;</div>
         <div class="price-item__text">
-          One location<br />
-          120 photos in color<br />
-          12 photos in retouch<br />
-          Readiness 2-3 weeks<br />
-          Make up, visage<br />
+          <span data-translate="price-descripton-1-span-1">One location</span><br />
+          <span data-translate="price-descripton-1-span-2">120 photos in color</span><br />
+          <span data-translate="price-descripton-1-span-3">12 photos in retouch</span><br />
+          <span data-translate="price-descripton-1-span-4">Readiness 2-3 weeks</span><br />
+          <span data-translate="price-descripton-1-span-5">Make up, visage</span><br />
         </div>
         <button class="price-item__order-btn button button_filled">
           Order shooting
@@ -22,11 +22,11 @@
         <h4 class="price-item__title">Premium</h4>
         <div class="price-item__price">700&nbsp;&dollar;</div>
         <div class="price-item__text">
-          One or two locations<br />
-          200 photos in color<br />
-          20 photos in retouch<br />
-          Readiness 1-2 weeks<br />
-          Make up, visage<br />
+          <span data-translate="price-descripton-2-span-1">One or two locations</span><br />
+          <span data-translate="price-descripton-2-span-2">200 photos in color</span><br />
+          <span data-translate="price-descripton-2-span-3">20 photos in retouch</span><br />
+          <span data-translate="price-descripton-2-span-4">Readiness 1-2 weeks</span><br />
+          <span data-translate="price-descripton-2-span-5">Make up, visage</span><br />
         </div>
         <button class="price-item__order-btn button button_filled">
           Order shooting
@@ -36,13 +36,13 @@
         <h4 class="price-item__title">Gold</h4>
         <div class="price-item__price">1000&nbsp;&dollar;</div>
         <div class="price-item__text">
-          Three locations or more<br />
-          300 photos in color<br />
-          50 photos in retouch<br />
-          Readiness 1 week<br />
-          Make up, visage, hairstyle<br />
+          <span data-translate="price-descripton-3-span-1">Three locations or more</span><br />
+          <span data-translate="price-descripton-3-span-2">300 photos in color</span><br />
+          <span data-translate="price-descripton-3-span-3">50 photos in retouch</span><br />
+          <span data-translate="price-descripton-3-span-4">Readiness 1 week</span><br />
+          <span data-translate="price-descripton-3-span-5">Make up, visage, hairstyle</span><br />
         </div>
-        <button class="price-item__order-btn button button_filled">
+        <button class="price-item__order-btn button button_filled" data-translate="order">
           Order shooting
         </button>
       </li>
