--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -113,8 +113,33 @@ ul {
   }
 }
 
+.logo {
+  display: block;
+  width: 50px;
+  height: 50px;
+}
+
+.logo,
+.socials {
+  img, svg {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    fill: $text-color;
+    transition: 0.2s;
+  }
+  a:hover {
+    svg {
+      fill: $theme-color;
+    }
+  }
+}
 
 @media (max-width: 768px) {
+  :root {
+    --container-padding: 64px;
+  }
   .section {
     margin-top: 80px;
 
@@ -129,6 +154,9 @@ ul {
 }
 
 @media (max-width: 540px) {
+  :root {
+    --container-padding: 20px;
+  }
   .section {
     margin-top: 20px;
 
