--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -22,9 +22,13 @@
 }
 
 .menu-hamburger {
-  width: 40px;
-  height: 40px;
-  padding: 11px 4px;
+  $vertical-padding: 11px;
+  $line-height: 3px;
+  $cross-line-size: 63.6px;
+
+  width: $hamburger-size;
+  height: $hamburger-size;
+  padding: $vertical-padding 0;
   cursor: pointer;
   justify-content: space-between;
   flex-direction: column;
@@ -32,21 +36,79 @@
   position: relative;
 
   &__line {
-    width: 32px;
-    height: 2px;
+    width: $hamburger-size;
+    height: $line-height;
     background: $text-color;
+    transition: 0.2s;
+  }
+
+  @keyframes rotateClockwiseReverse {
+    from {
+      transform: rotate(45deg);
+      top: $hamburger-size / 2;
+      width: $cross-line-size;
+    }
+    to {
+      transform: rotate(0deg);
+      top: $vertical-padding;
+      width: $hamburger-size;
+    }
+  }
+
+  @keyframes rotateAntiClockwiseReverse {
+    from {
+      transform: rotate(-45deg);
+      top: $hamburger-size / 2;
+      width: $cross-line-size;
+    }
+    to {
+      transform: rotate(0deg);
+      top: $hamburger-size - $vertical-padding - $line-height;
+      width: $hamburger-size;
+    }
+  }
+
+  @keyframes rotateClockwise {
+    from {
+      transform: rotate(0deg);
+      top: $vertical-padding;
+      width: $hamburger-size;
+    }
+    to {
+      transform: rotate(45deg);
+      top: $hamburger-size / 2;
+      width: $cross-line-size;
+    }
+  }
+
+  @keyframes rotateAntiClockwise {
+    from {
+      transform: rotate(0deg);
+      top: $hamburger-size - $vertical-padding - $line-height;
+      width: $hamburger-size;
+    }
+    to {
+      transform: rotate(-45deg);
+      top: $hamburger-size / 2;
+      width: 63.6px;
+    }
+  }
+
+  @keyframes lineSlideIn {
+    from {
+      transform: translateX(-100%);
+      opacity: 0;
+    }
+    to {
+      transform: translateX(0);
+      opacity: 1;
+    }
   }
 }
 
-.logo {
-  display: block;
-  width: 50px;
-  height: 50px;
-
-  img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
+.menu-hamburger:hover {
+  .menu-hamburger__line {
+    background: $theme-color;
   }
 }
 
@@ -100,39 +162,39 @@
 
   .menu-hamburger {
     display: flex;
-    
+
+    &_hide,
     &_close {
       display: block;
       position: relative;
 
-      @keyframes rotateClockwise {
-        from {
-          transform: rotate(0deg);
-          top: 4px;
-        }
-        to {
-          transform: rotate(45deg);
-          top: 20px;
-        }
+      .menu-hamburger__line {
+        position: absolute;
       }
-      @keyframes rotateAntiClockwise {
-        from {
-          transform: rotate(0deg);
-          top: 34px
-        }
-        to {
-          transform: rotate(-45deg);
-          top: 20px;
-        }
-      }
-      .menu-hamburger {
-        &__line {
-          position: absolute;
-          left: 4px;
-        }
+    }
 
+    &_hide {
+      .menu-hamburger {
         &__line:nth-child(1) {
-          animation: rotateClockwise 0.2s linear forwards;
+          @include anim(rotateClockwiseReverse);
+        }
+  
+        &__line:nth-child(2) {
+          display: block;
+          top: 25px;
+          @include anim(lineSlideIn);
+        }
+  
+        &__line:nth-child(3) {
+          @include anim(rotateAntiClockwiseReverse);
+        }
+      }
+    }
+
+    &_close {
+      .menu-hamburger {
+        &__line:nth-child(1) {
+          @include anim(rotateClockwise);
         }
   
         &__line:nth-child(2) {
@@ -140,7 +202,7 @@
         }
   
         &__line:nth-child(3) {
-          animation: rotateAntiClockwise 0.2s linear forwards;
+          @include anim(rotateAntiClockwise);
         }
       }
     }
@@ -152,22 +214,29 @@
     padding: $header-height;
     top: 0;
     right: 0;
-    width: 50%;
+    width: 75%;
     height: 100vh;
     flex-direction: column;
-    align-items: center;
-    background: rgba($bg-color, 0.8);
-    
-    @keyframes slideIn {
+    align-items: flex-start;
+    background: $bg-color;
+
+    &__item-link {
+      font-size: 34.8235px;
+      line-height: 73px;
+    }
+
+    @keyframes menuSlideIn {
       from {
         transform: translateX(100%);
+        opacity: 0;
       }
       to {
         transform: translateX(0);
+        opacity: 1;
       }
     }
 
-    @keyframes fadeOut {
+    @keyframes menuFadeOut {
       from {
         opacity: 1;
       }
@@ -178,14 +247,12 @@
 
     &_show {
       display: flex;
-      transform: translateX(100%);
-      animation: slideIn 0.2s linear forwards;
+      @include anim(menuSlideIn);
     }
 
     &_hide {
       display: flex;
-      opacity: 1;
-      animation: fadeOut 0.2s linear forwards;
+      @include anim(menuFadeOut);
     }
   }
   
